# OneThoughtTauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: windows-release.yml
docs/: 开发问题与经验记录.md
openspec/changes/optimize-tool-performance/: design.md  proposal.md  tasks.md
openspec/changes/optimize-tool-performance/specs/thought-performance/: spec.md
src/: App.css  App.tsx  QuickCapture.tsx  api.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-capture.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  store.rs
src/utils/: tagSuggestions.ts  tags.ts
